--- a/workspace/RTGame/res/values/strings.xml
+++ b/workspace/RTGame/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_start">DKFZ</string>
+    <string name="title_activity_end">Game Over</string>
     <string name="dummy_button">PLAY</string>
     <string name="dummy_content">The RT Game</string>
 
